# artc

./: .gitignore  README.md  TEMPORARY_demo_script.py  __init__.py  __main__.py  artc_installer.sh  basedpyright.json  pyproject.toml  setup.py
cli/: commands.py
core/analysis/: beat_alignment.py  dynamic_time_warping.py  pitch.py  spectral_bandwidth.py  spectral_contrast.py  spectrogram.py  temporal_centroid.py  temporal_flux.py  weighted_cyclic_tempogram.py
core/tests/test_analysis/: test_beat_alignment.py  test_chroma_cens.py  test_chroma_stft.py  test_dynamic_time_warping.py  test_energy_envelope.py  test_harmonic_noise_ratio.py  test_harmonic_tempogram.py  test_loudness.py  test_mfcc.py  test_onset_detection.py  test_peak_matching.py  test_pitch.py  test_spectral_bandwidth.py  test_spectral_centroid.py  test_spectral_contrast.py  test_spectral_flatness.py  test_spectral_roll_off.py  test_spectrogram.py  test_tempo.py
installers/: README.en.md  README.es.md  README.md  artc_install_linux.sh  artc_install_windows.bat  artc_install_windows_core.ps1
src/artc/: __init__.py  __main__.py  types.py
src/artc/cli/: __init__.py  commands.py
src/artc/core/: task_manager.py
src/artc/core/analysis/: chroma_cens.py  chroma_stft.py  energy_envelope.py  harmonic_noise_ratio.py  harmonic_tempogram.py  loudness.py  mfcc.py  onset_detection.py  peak_matching.py  spectral_centroid.py  spectral_flatness.py  spectral_roll_off.py  tempo.py  tempogram.py  zero_crossing_rate.py
src/artc/core/charts/: tree_plot.py
src/artc/core/configurations/: __init__.py  artc_config.toml  (+3 more)
(+30 files in other folders)
